--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="top">
+            <span class="top__icon"><i class="fal fa-film"></i></span>
+            <p class="top__p"> See no special offer restrictions</p>
+        </div>
+        <nav class="nav">
+            <div class="container nav__wrap">
+                <a href="#" class="logo">
+                    <img src="./img/logo.png" alt="">
+                    <span class="logo__span"> CINEMAS</span>
+                </a>
+                <ul class="nav__menu">
+                    <li class="menu__item"><a href="#" class="menu__link">Films</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Serials</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Cartoons</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Collections</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="banner">
 
+        </div>
+    </header>
 </body>
 
 </html>
