--- a/index.html
+++ b/index.html
@@ -23,15 +23,37 @@
                     <span class="logo__span"> CINEMAS</span>
                 </a>
                 <ul class="nav__menu">
-                    <li class="menu__item"><a href="#" class="menu__link">Films</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Serials</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Cartoons</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link">Collections</a></li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Films</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Serials</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Cartoons</a>
+                    </li>
+                    <li class="menu__item">
+                        <a href="#" class="menu__link">Collections</a>
+                    </li>
                 </ul>
             </div>
         </nav>
         <div class="banner">
-
+            <div class="banner__bg"></div>
+            <div class="container banner__wrap">
+                <div class="banner__desc">
+                    <h1 class="banner__h">Kong: Skull Island</h1>
+                    <p class="banner__p">
+                        The film takes the viewer to the 70s of the last century. The protagonist organizes an
+                        expedition to the Skull island, always covered in fog, on which King Kong was once caught to
+                        find the missing brother and some mysterious substance. During...
+                    </p>
+                    <div class="banner__links">
+                        <a href="#" class="btn">Watch now</a>
+                        <a href="#" class="btn">Download</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 </body>
