--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             </div>
         </div>
     </header>
-
     <section class="films">
         <div class="container">
             <div class="title">
@@ -127,7 +126,6 @@
             </div>
         </div>
     </section>
-
     <section class="trailer">
         <video src="./videos/Marvel Studios' Black Widow _ Final Trailer.mp4" muted loop autoplay
             class="trailer__video"></video>
@@ -177,6 +175,68 @@
                         <h3 class="collect__h">Star Wars</h3>
                     </div>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="series">
+        <div class="container">
+            <div class="title">
+                <h2 class="title__h">Series</h2>
+            </div>
+            <div class="serial__poster">
+                <img src="./img/poster.png" class="poster__img" alt="">
+                <div class="poster__bg"></div>
+                <h3 class="poster__h">Game of Thrones</h3>
+                <p class="poster__p">
+                    The time of prosperity is drawing to a close, and the summer, which lasted almost a
+                    decade, is dying away. Around the center of power of the Seven Kingdoms, the Iron Throne, a
+                    conspiracy is ripening, and during this difficult time, the king decides to seek support from his
+                    youth friend Eddard Stark. In a world where everyone - from the king to the mercenary - is eager for
+                    power, intrigues and is ready to stick a knife in the back, there is ...</p>
+                <a href="#" class="btn">Watch now</a>
+            </div>
+            <div class="series__collection">
+                <div class="series__card">
+                    <img src="./img/series1.png" class="series__card-imgBg" alt="">
+                    <div class="series__card-bg"></div>
+                    <div class="series__body">
+                        <span class="body-icon"><i class="fad fa-play"></i></span>
+                        <h3 class="body__h">Wanda Vision</h3>
+                    </div>
+                </div>
+                <div class="series__card">
+                    <img src="./img/series2.png" class="series__card-imgBg" alt="">
+                    <div class="series__card-bg"></div>
+                    <div class="series__body">
+                        <span class="body-icon"><i class="fad fa-play"></i></span>
+                        <h3 class="body__h">The Flash</h3>
+                    </div>
+                </div>
+                <div class="series__card">
+                    <img src="./img/series3.png" class="series__card-imgBg" alt="">
+                    <div class="series__card-bg"></div>
+                    <div class="series__body">
+                        <span class="body-icon"><i class="fad fa-play"></i></span>
+                        <h3 class="body__h">The Great</h3>
+                    </div>
+                </div>
+                <div class="series__card">
+                    <img src="./img/series4.png" class="series__card-imgBg" alt="">
+                    <div class="series__card-bg"></div>
+                    <div class="series__body">
+                        <span class="body-icon"><i class="fad fa-play"></i></span>
+                        <h3 class="body__h">GOTHAM</h3>
+                    </div>
+                </div>
+                <div class="series__card">
+                    <img src="./img/series5.png" class="series__card-imgBg" alt="">
+                    <div class="series__card-bg"></div>
+                    <div class="series__body">
+                        <span class="body-icon"><i class="fad fa-play"></i></span>
+                        <h3 class="body__h">The witcher</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
